tests/cli/snapshots/cli__post_checkout__post_checkout_new_stack.snap
---
source: tests/cli/post_checkout.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
Switched to a new branch 'feature-stack'
[gherrit] Detected feature-stack as a new branch.
[gherrit] Branch feature-stack is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push feature-stack itself.
[gherrit] To opt-out, run: gherrit unmanage
