tests/cli/snapshots/cli__post_checkout__post_checkout_shared_branch.snap
---
source: tests/cli/post_checkout.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
branch 'collab-feature' set up to track 'origin/collab-feature'.


STDERR:
Switched to a new branch 'collab-feature'
[gherrit] Detected collab-feature as a shared branch.
[gherrit] Branch collab-feature is now unmanaged by GHerrit.
[gherrit] To have GHerrit manage this branch, run: gherrit manage
